CodeLite: Do not pass -j argument with CPU count 0

Fixes: #15054, #16727